--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -4,10 +4,12 @@ main {
   padding-bottom: 5rem;
 
   @media (min-width: $screen-md) {
-    position: absolute;
-    top: 10rem;
-    left: 0;
-    width: 100%;
+    // position: absolute;
+    // top: 10rem;
+    // left: 0;
+    // width: 100%;
+
+    margin-top: -15rem;
   }
 }
 
@@ -31,10 +33,30 @@ main {
   
     color: $clr-primary;
 
+    .section-card-icon {
+      font-size: 3rem;
+    }
+
+    div {
+      display: flex;
+      align-items: center;
+      column-gap: 2rem;
+
+      h2 {
+        width: min-content;
+      }
+
+      @media (min-width: $screen-md) {
+        flex-direction: column;
+        align-items: flex-start;
+        row-gap: .5rem;
+      }
+    }
+
     @media (min-width: $screen-md) {
       flex-direction: column;
       align-items: flex-start;
-      row-gap: 7rem;
+      row-gap: 13rem;
 
       width: 100%;
       padding: 2rem;
