--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -1,7 +1,51 @@
 @import 'variables';
 
 main {
-  padding-bottom: 5rem;
+  padding-bottom: 20rem;
+
+  #round-icon {
+    width: 15rem;
+    aspect-ratio: 1 / 1;
+
+    position: absolute;
+    bottom: 0;
+
+    margin-left: 5rem;
+
+    z-index: 999;
+
+    
+    @media (min-width: $screen-md) {
+      position: absolute;
+      top: 0;
+      
+      margin-top: 5rem;
+      margin-left: 3rem;
+    }
+  }
+
+  #dots-icon {
+    width: 15rem;
+    aspect-ratio: 1 / 3;
+
+    position: absolute;
+    top: 20%;
+    right: 12%;
+
+    background-image: url('/dots-icon.svg');
+    background-size: contain;
+    background-repeat: repeat;
+
+    @media (min-width: $screen-md) {
+      aspect-ratio: 1 / 1;
+      // width: 25rem;
+      
+      top: 0;
+      right: 0;
+      // top: -60%;
+      // right: -5%;
+    }
+  }
 
   @media (min-width: $screen-md) {
     // position: absolute;
